v3 Final Version