@@ -10,6 +10,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Builder
@@ -32,8 +33,9 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // π.χ. μετατροπή του UserRole σε GrantedAuthority
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return Collections.singletonList(
+                new SimpleGrantedAuthority("ROLE_" + this.role.name())
+        );
     }
 
     @Override
